@@ -1,5 +1,10 @@
 2009-12-08  Torbjorn Granlund  <tege@gmplib.org>
 
+	* tune/speed.h (SPEED_ROUTINE_MPN_MULMOD_BNM1_ROUNDED): New define.
+	* tune/common.c (speed_mpn_mulmod_bnm1_rounded): New function.
+	* tune/speed.c (routine): Add mpn_mulmod_bnm1_rounded for measuring 
+	mpn_mulmod_bnm1 at recommended sizes.
+	
 	* mpn/generic/mulmod_bnm1.c (mpn_mulmod_bnm1_next_size): Rewrite.
 	(mpn_bc_mulmod_bnm1): Use mpn_add_n instead of mpn_add.
 
